Added the --user option to disable-feature.pl and enable-feature.pl to turn features off and on in all domains owned by some user, and the list-domains.pl to fnd domains by user.
Both the maximum and minimum versions for scripts can now be selected on the global Script Installers page.
Added the --user and --all-domains parameters to list-scripts.pl, list-users.pl, list-aliases.pl and list-simple-aliases.pl, to list objects in multiple domains.
---- Changes since 3.49 ----
When used, the ClamAV server clamd can be stopped and started from the system information page, just like MySQL and Apache.
Added the original website URLs for all script installers, displayed on the installation form and on the page showing details of an installed script.
Updated the phpMyAdmin script installer to 2.11.2.2, and Instiki 0.12.0.
The initial administration login and password is displayed after installing a script.
Advanced autoreply options are hidden by default, to make the alias form less confusing.
When re-sending the signup email for a server, the owner's email address can be entered.
When there are too many servers on the List Virtual Servers page to show in a table, buttons to update and delete them all are displayed along with the seach form.
Added a Module Config option to make the Unix group name for a new domain always follow the username, and made group name selection more consistent across creation methods.
Moved the Administration username field into the first (visible) section of the Create Virtual Server page.
Cron jobs created by Virtualmin will still be recognized even if manually modified to redirect output or add other pre- and post-commands.
Virtualmin API scripts run via HTTP are now executed within the same process, which should make them about twice as fast.