@@ -76,8 +76,3 @@
 
  - allow shells list (with descriptions) to be configurable for domain owners
 
- - filip's new alias domain system
-	- make sure virtusers from alias aren't picked up by users in the
-	  target domain
-	- remove debug code
-	- test renaming
